--- a/config/email-templates/opportunities/opportunity-assign-swu-email.html
+++ b/config/email-templates/opportunities/opportunity-assign-swu-email.html
@@ -9,6 +9,7 @@
     <script src="main.js"></script>
 </head>
 <body>
+<!-- TODO: // mat need to update URL once decided for email templates -->
     <img src="https://bcdevexchange.org/modules/core/client/img/logo/new-logo-220px.png">
     <br>
     <h2>Congratulations {{user.displayName}}!</h2> The Proposal you submitted to work on, {{ opportunity.name }}, has been selected! {{opportunity.assignor}} is offering the assignment to you.
