--- a/config/email-templates/users/gov-request-declined-email.html
+++ b/config/email-templates/users/gov-request-declined-email.html
@@ -9,6 +9,7 @@
     <script src="main.js"></script>
 </head>
 <body>
+<!-- TODO: // mat need to update URL once decided for email templates -->
     <img src="https://bcdevexchange.org/modules/core/client/img/logo/new-logo-220px.png">
     <br>
     <p>Hi {{ requestingUser.firstName }},</p><p>Your request for public sector verification has been denied.  If you feel this is in error, please send email to <a href="mailto:bcdevexchange@gov.bc.ca">bcdevexchange@gov.bc.ca</a></p>
