--- a/config/email-templates/users/gov-member-request-email.html
+++ b/config/email-templates/users/gov-member-request-email.html
@@ -9,6 +9,7 @@
     <script src="main.js"></script>
 </head>
 <body>
+<!-- TODO: // mat need to update URL once decided for email templates -->
     <img src="https://bcdevexchange.org/modules/core/client/img/logo/new-logo-220px.png">
     <br>
     <p>Hi Admin,</p>
