--- a/public/unsupported/index.html
+++ b/public/unsupported/index.html
@@ -3,7 +3,7 @@
 </head>
 <body>
     <div class="bg-dark h-100">
-        <img src="/modules/core/client/img/logo/new-logo-white.svg" width="320" height="80" alt=BCDevExchange>
+        <img src="/project/modules/core/client/img/logo/sovrin_logo.png" width="320" height="80" alt=BCDevExchange>
         <div class="container">
             <div class="row py-5 text-center text-light">
                 <div class="col py-5">
